# qml-project

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
doc/: CMakeLists.txt
i18n/: qml-project_pt.ts  ts.qrc
qml/: main.qml
script/: CMakeLists.txt
script/qt5-create-qrc/: CMakeLists.txt  main.cpp  parse_command_line.cpp  parse_command_line.h
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  quadratic.cpp  quadratic.h
test/: CMakeLists.txt  basic_test.cpp
ui/: main.qml
